--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
-  <body>
-
+  <body class="home-template">
     {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
+    {{ content }}
     {% include footer.html %}
-
   </body>
-
 </html>
