--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,3 +23,19 @@
       </div>
     </div>
 </div>
+<div class="row show-for-small dn-menu-small dn-initial" style="display: block;">
+  <div class="small-6 columns dn-small-clock">
+    <a class="night-day-action"><span class="dn-clock"></span></a>
+    <span class="dn-time">11:55 ÖÖ</span>
+  </div>
+</div>
+<div class="row show-for-small dn-blog-info-small dn-initial" style="display: block;">
+  <div class="large-12 medium-12 small-12 columns dn-blog-header-small">
+    <div class="small-12 columns">
+      <div class="uimg" style="background-image: url(/img/ov.jpg)"></div>
+      <div>
+        <h5>Okan Vurdu</h5>
+      </div>
+    </div>
+  </div>
+</div>
