--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,5 @@
 @import url(normalize.css);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,latin-ext);
 
 @font-face {
     font-family: '/img-font';
@@ -50,7 +51,7 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 1.4em;
     font-weight: 300;
     background: #fafafa;
@@ -91,7 +92,7 @@ h4, h5, h6 {
     text-rendering: optimizeLegibility;
     line-height: 1;
     margin-top: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 700;
 }
 
@@ -448,7 +449,7 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 5rem;
     letter-spacing: -1px;
     font-weight: bold;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     text-shadow: 0 1px 6px rgba(0,0,0,0.1);
 }
 
@@ -457,7 +458,7 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 1.8rem;
     line-height: 1.5em;
     font-weight: 300;
-    font-family: 'Roboto', serif;
+    font-family: 'Open Sans', serif;
     letter-spacing: 0;
     text-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
@@ -746,7 +747,7 @@ margin on the iframe, cause it breaks stuff. */
     position: relative;
     margin: 3rem 0 0 0;
     padding: 3rem 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 0.7rem;
     line-height: 1.1rem;
     text-align: center;
