diary was added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
         <ul class="side-nav">
           <li><a href="/" class="dn-ajx-link">Anasayfa</a></li>
           <li><a href="/hakkimda" class="dn-ajx-link">Hakkımda</a></li>
+          <li><a href="/gunluk" class="dn-ajx-link">Günlük</a></li>
         </ul>
         <hr class="dn-msep">
         <div class="dn-menu-sec">
