--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <hr class="dn-msep">
         <div class="dn-menu-sec">
           <a class="night-day-action"><span class="dn-clock"></span></a>
-          <span class="dn-time">1:53 ÖÖ</span>
+          <span class="dn-time"></span>
         </div>
         <hr class="dn-msep">
         {% if page.is_post %}
